QR Generator generates qr that hold studentID, added the qr generated to the student's index, polished the gradPreview page and limited audio time to 10 seconds, created a holder servlet and jsp for ceremony for later editing.